--- a/css/style.css
+++ b/css/style.css
@@ -67,12 +67,7 @@
 }
 
 
-
-
-
-
-
-
+/* COLORS */
 :root {
     --color-brand-darkblue: #011C44;
     --color-brand-blue: #2B7FFF;
@@ -82,8 +77,39 @@
     --color-yellow: #FFD02B;
 }
 
+/* BASE */
+
+.container {
+    width: 100%;
+    max-width: 1288px;
+    margin: 0 auto;
+    padding: 0px 24px;
+}
+
+h1,
+h2,
+h3,
+p {
+    margin-top: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+address {
+    font-style: normal;
+}
+
+span {
+    color: var(--color-brand-blue);
+}
+
 body {
+    margin: 0;
     font-family: 'Roboto';
+    font-size: 18px;
+    line-height: 1.5;
     color: var(--color-brand-darkblue);
 }
 
@@ -100,6 +126,9 @@ ul {
 }
 
 .button {
+    margin-bottom: 14px;
+    line-height: 1.2;
+    font-weight: 600;
     width: 220px;
     height: 50px;
     background-color: var(--color-brand-blue);
@@ -116,11 +145,106 @@ ul {
     cursor: pointer;
 }
 
+h1 {
+    font-size: 140px;
+    font-weight: 700;
+    line-height: 0.8;
+    color: var(--color-brand-blue);
+}
+
+h2 {
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 1.1;
+}
+
 
 /* HEADER */
 
 .header {
     font-weight: 400;
     font-size: 18px;
+    line-height: 1.2;
+}
+
+/* hero section */
+
+.hero-section {
+    padding: 123px 0px 83px 0px;
+}
+
+.hero-logo {
+    margin-bottom: 40px;
+}
+
+.hero-item {
+    margin-bottom: 16px;
+}
+
+.mini-p {
+    margin-bottom: 0;
+    padding-left: 38px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+
+/* main section */
+
+.main-section {
+    padding: 83px 0px 187.5px 0px;
+}
+
+.main-section p {
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 1.7;
+}
+
+.uppercase {
+    font-weight: 700;
+    text-transform: uppercase;
+    color: var(--color-brand-darkblue);
+}
+
+/* card section */
+
+.card-section {
+    padding: 187.5px 0px 48px 0px;
+}
+
+.card-section p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.3;
+}
+
+
+/* slider section */
+
+.slider-section {
+    padding: 48px 0px;
+}
+
+.slider-section p {
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 1.2;
+}
+
+
+/* contact section */
+
+.contact-section {
+    padding: 48px 0px 96px 0px;
+}
+
+
+/* footer */
+
+.footer-nav {
+    font-size: 16px;
+    font-weight: 400;
     line-height: 1.2;
 }
