--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@
     --color-light-grey: #747272;
     --color-yellow: #FFD02B;
     --star-color: #011F4A;
+    --hero-vector: #C4C4C4;
 }
 
 /* BASE */
@@ -123,6 +124,7 @@ body {
 a {
     text-decoration: none;
     color: var(--color-brand-darkblue);
+    transition: color 0.3s;
 }
 
 a:hover {
@@ -155,9 +157,6 @@ ul {
     cursor: pointer;
 }
 
-.huy:hover {
-    background-color: tomato;
-}
 
 h1 {
     font-size: 140px;
@@ -179,14 +178,15 @@ h2 {
 
 .header {
     position: absolute;
-    top: 32px;
-    left: 100px;
-    right: 100px;
-    bottom: 32px;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 32px;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.2;
     max-height: fit-content;
+    background-color: #FFFFFF40;
 }
 
 .header-container {
@@ -204,6 +204,10 @@ h2 {
 .header-icon-link {
     display: flex;
     gap: 32px;
+}
+
+.header-svg {
+    transition: fill 0.3s;
 }
 
 .header-svg:hover {
@@ -228,11 +232,18 @@ h2 {
 
 .hero-section {
     padding: 123px 0px 83px 0px;
-    background-image: url(../image/hero-background.jpg);
+    background-image:
+        linear-gradient(89.38deg,
+            #FFFFFF 30.62%,
+            rgba(255, 255, 255, 0.850898) 41.31%,
+            rgba(255, 255, 255, 0.193204) 58.65%,
+            rgba(255, 255, 255, 0) 72.78%),
+        url(../image/hero-background.jpg);
     background-repeat: no-repeat;
     background-position: right;
     background-size: cover;
 }
+
 
 .hero-logo {
     margin-bottom: 40px;
@@ -392,6 +403,10 @@ h2 {
     cursor: pointer;
 }
 
+.rotate {
+    transform: rotate(180deg);
+}
+
 .slider-button:hover {
     border: none;
     fill: var(--color-brand-white);
@@ -417,13 +432,19 @@ h2 {
 .slider-card {
     color: var(--color-brand-white);
     text-align: center;
-    padding-top: 250px;
+    height: 400px;
     border-radius: 8px;
     border: 1px solid var(--color-grey);
     background-image: linear-gradient(180.05deg,
             rgba(1, 28, 68, 0) 48.53%,
             rgba(1, 28, 68, 0.725825) 84.61%,
             #011C44 101.39%);
+    transition: transform 0.3s;
+    cursor: pointer;
+}
+
+.slider-card:hover {
+    transform: scale(1.05);
 }
 
 /* contact section */
@@ -504,6 +525,7 @@ h2 {
 
 .footer-svg {
     fill: var(--color-brand-white);
+    transition: all 0.3s;
 }
 
 .footer-svg:hover {
@@ -557,6 +579,7 @@ h2 {
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    transition: all 0.5s;
 }
 
 .backdrop-hidden {
@@ -566,14 +589,17 @@ h2 {
 }
 
 .modal {
-    padding: 30px;
+    padding: 42px 144px;
     text-align: center;
     color: var(--color-brand-white);
     position: relative;
-    width: 720px;
-    height: 680px;
+    width: 100%;
+    max-width: 720px;
+    height: 90%;
+    max-height: 680px;
     border-radius: 48px;
     background-color: var(--color-brand-darkblue);
+    overflow-y: auto;
 }
 
 .modal-btn-close {
@@ -582,4 +608,80 @@ h2 {
     top: 40px;
     right: 40px;
     cursor: pointer;
+}
+
+
+
+
+.modal-title {
+    max-width: 435px;
+    font-size: 64px;
+    line-height: 1.16;
+    margin-bottom: 40px;
+}
+
+.modal-litell-title {
+    margin: 0 auto;
+    margin-bottom: 32px;
+    max-width: 274px;
+}
+
+/* form */
+
+.form-field {
+    margin-bottom: 24px;
+}
+
+.form-label {
+    display: block;
+}
+
+.form-input {
+    width: 310px;
+    height: 52px;
+    padding: 18px 32px;
+    border: 2px solid var(--color-light-grey);
+    border-radius: 32px;
+    background-color: transparent;
+    color: var(--color-brand-white);
+}
+
+.form-input:focus {
+    border-color: var(--color-yellow);
+    outline: none;
+    background-color: var(--color-light-grey);
+}
+
+.form-input::placeholder {
+    color: var(--color-brand-white);
+}
+
+.visually-hidden {
+    position: absolute;
+    left: 10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+
+.form-input:focus::placeholder {
+    color: palevioletred;
+}
+
+.form-button {
+    margin-bottom: 8px;
+}
+
+.form-button:hover {
+    color: var(--color-brand-white);
+}
+
+.privacy {
+    margin: 0 auto;
+    max-width: 213px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.5;
+    color: var(--color-light-grey);
 }
