--- a/scss/layout/_main-section.scss
+++ b/scss/layout/_main-section.scss
@@ -1,5 +1,9 @@
 .main-section {
-    padding: 83px 0px 88px 0px;
+    padding: 83px 0px 0px 0px;
+
+    @media screen and (max-width: $bp-desktop) {
+        padding: 0;
+    }
 
     &__container {
         position: relative;
@@ -14,6 +18,21 @@
         top: 352px;
         position: absolute;
         fill: var(--star-color);
+
+        @media screen and (max-width: $bp-desktop) {
+            display: none;
+
+            @media screen and (max-width: $bp-tablet) {
+                display: block;
+                position: absolute;
+                right: -9px;
+                top: 95%;
+                width: 40px;
+                height: 40px;
+            }
+        }
+
+
     }
 
     &__star-twoo {
@@ -21,6 +40,10 @@
         top: 38px;
         position: absolute;
         fill: var(--color-brand-blue);
+
+        @media screen and (max-width: $bp-desktop) {
+            display: none;
+        }
     }
 
     &__star-three {
@@ -28,6 +51,10 @@
         top: 280px;
         position: absolute;
         fill: var(--color-light-grey);
+
+        @media screen and (max-width: $bp-desktop) {
+            display: none;
+        }
     }
 
     &__content {
@@ -36,16 +63,56 @@
         gap: 40px;
         margin-top: 40px;
         max-width: 710px;
+
+        @media screen and (max-width: $bp-desktop) {
+            flex-grow: 1;
+            text-align: center;
+            padding: 20px;
+            max-width: 100%;
+
+            @media screen and (max-width: $bp-tablet) {
+                text-align: left;
+                padding: 20px 0px;
+                margin: 0;
+                gap: 24px;
+            }
+
+        }
     }
 
     &__title {
         margin-bottom: 0;
+
+        @media screen and (max-width: $bp-desktop) {
+            text-align: center;
+            font-family: "Play";
+            font-size: 54px;
+            font-weight: 700;
+            line-height: 1.17;
+
+            @media screen and (max-width: $bp-tablet) {
+                font-family: "Play";
+                font-size: 32px;
+                font-weight: 700;
+                line-height: 1.17;
+                text-align: left;
+
+            }
+        }
+
+
     }
 
     &__p {
         font-size: 22px;
         font-weight: 400;
         line-height: 1.7;
+
+        @media screen and (max-width: $bp-tablet) {
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 1.2;
+        }
     }
 
     &__uppercase {
@@ -57,6 +124,10 @@
     &__image {
         position: relative;
         max-width: 500px;
+
+        @media screen and (max-width: $bp-desktop) {
+            display: none;
+        }
     }
 
     &__image-first {
