--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import "./components/container";
 @import "./components/link";
 @import "./components/visually-hidden";
+@import "./components/pagination";
 
 
 
@@ -15,6 +16,7 @@
 
 
 @import "./layout/header-section";
+@import "./layout/mobile-menu";
 
 /* hero section */
 
