--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,3 +1,15 @@
+.form {
+    &__privacy {
+        margin: 0 auto;
+        max-width: 213px;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.5;
+        color: var(--color-light-grey);
+    }
+}
+
+
 .form-field {
     margin-bottom: 24px;
 }
@@ -7,8 +19,10 @@
 }
 
 .form-input {
-    width: 310px;
-    height: 52px;
+    width: 100%;
+    max-width: 310px;
+    height: 100%;
+    max-height: 52px;
     padding: 18px 32px;
     border: 2px solid var(--color-light-grey);
     border-radius: 32px;
@@ -37,13 +51,4 @@
 
 .form-button:hover {
     color: var(--color-brand-white);
-}
-
-.privacy {
-    margin: 0 auto;
-    max-width: 213px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.5;
-    color: var(--color-light-grey);
 }
