--- a/scss/components/_modal-window.scss
+++ b/scss/components/_modal-window.scss
@@ -1,15 +1,23 @@
 .modal-window {
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
     padding: 42px 144px;
     text-align: center;
     color: var(--color-brand-white);
     position: relative;
+    width: 100%;
     max-width: 720px;
-    height: 98%;
+    height: 100%;
     max-height: 680px;
     border-radius: 48px;
     background-image: url(../image/footer-background.png);
     background-color: var(--color-brand-darkblue);
     overflow-x: hidden;
+
+    @media screen and (max-width: $bp-tablet) {
+        padding: 42px 60px;
+    }
 
     &__btn-close {
         background-color: transparent;
@@ -29,6 +37,10 @@
         font-size: 64px;
         line-height: 1.16;
         margin-bottom: 40px;
+
+        @media screen and (max-width: $bp-mobile) {
+            font-size: 38px;
+        }
     }
 
     &__litell-title {
@@ -38,5 +50,12 @@
         margin: 0 auto;
         margin-bottom: 32px;
         max-width: 276px;
+    }
+
+    &__button {
+        @media screen and (max-width: $bp-tablet) {
+            max-width: 220px;
+            width: 100%;
+        }
     }
 }
