--- a/scss/layout/_contact-section.scss
+++ b/scss/layout/_contact-section.scss
@@ -2,17 +2,63 @@
     padding: 48px 0px 96px 0px;
     text-align: center;
 
+    @media screen and (max-width: $bp-mobile) {
+        padding-bottom: 0;
+    }
+
     &__container {
         display: flex;
-        gap: 32px;
+        flex-direction: column;
+        gap: 24px;
         justify-content: center;
+
+        @media screen and (min-width: $bp-tablet) {
+            flex-direction: row;
+            gap: 24px;
+        }
+    }
+
+    &__title-main {
+
+        @media screen and (max-width: $bp-tablet) {
+            font-size: 38px;
+            font-weight: 700;
+            line-height: normal;
+        }
+    }
+
+    &__karta {
+        @media screen and (max-width: $bp-mobile) {
+            order: 1;
+            margin: 0 -24px;
+        }
     }
 
     &__map {
+        width: 100%;
+        height: 232px;
         flex-shrink: 0;
+        align-items: end;
+
+        @media screen and (min-width: $bp-mobile) {
+            border-radius: 16px;
+        }
+
+        @media screen and (min-width: $bp-tablet) {
+            width: 500px;
+            height: 482px;
+            border-radius: 16px;
+        }
+
+        @media screen and (min-width: $bp-desktop) {
+            width: 605px;
+            height: 481px;
+            border-radius: 16px;
+        }
     }
 
     &__form {
+        height: 482px;
         padding: 48px 56px;
         color: var(--color-brand-white);
         text-align: center;
@@ -22,6 +68,12 @@
         background-image: url(../image/footer-background.png);
         background-color: var(--color-brand-darkblue);
         border-radius: 32px;
+
+
+    }
+
+    &__form-item {
+        align-items: end;
     }
 
     &__title {
