--- a/scss/layout/_footer-section.scss
+++ b/scss/layout/_footer-section.scss
@@ -1,8 +1,13 @@
 .footer-section {
+    text-align: left;
     position: relative;
     background-image: url(../image/footer-background.png);
     background-color: var(--color-brand-darkblue);
     color: var(--color-brand-white);
+
+    @media screen and (max-width: $bp-tablet) {
+        text-align: center;
+    }
 
     & a {
         color: var(--color-brand-white);
@@ -13,15 +18,36 @@
     }
 
     &__nav {
-        padding: 56px 0px 56px 0px;
+        flex-direction: column;
         display: flex;
-        justify-content: space-between;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.2;
+        align-items: center;
+        padding: 32px 60px 66px 60px;
+
+        @media screen and (min-width: $bp-mobile) {
+            padding: 32px 91px 66px 91px;
+        }
+
+        @media screen and (min-width: $bp-tablet) {
+            padding: 56px 0px 56px 0px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 1.2;
+        }
+    }
+
+    &__beauty-logo {
+        margin-bottom: 42px;
+
+        @media screen and (min-width: $bp-tablet) {
+            margin-bottom: 106px;
+        }
     }
 
     &__menu {
+        margin-top: -27px;
         display: flex;
         flex-direction: column;
         gap: 16px;
@@ -33,10 +59,15 @@
         gap: 16px;
     }
 
+
     &__address-items {
-        gap: 16px;
-        display: flex;
-        flex-direction: column;
+        display: none;
+
+        @media screen and (min-width: $bp-tablet) {
+            gap: 16px;
+            display: flex;
+            flex-direction: column;
+        }
     }
 
     &__address-icons {
@@ -45,17 +76,34 @@
     }
 
     &__copy {
+        margin-bottom: 80px;
         display: flex;
         flex-direction: column;
         gap: 16px;
+
+
+        @media screen and (max-width: $bp-tablet) {
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 1.5;
+            color: var(--color-light-grey);
+        }
     }
 
     &__kon {
         margin: 0;
+
+        @media screen and (max-width: $bp-tablet) {
+            display: none;
+        }
     }
 
     &__item {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.5;
         color: var(--color-light-grey);
+
     }
 
     &__svg {
@@ -67,7 +115,7 @@
         }
     }
 
-    &__footer-photo {
+    &__photo {
         bottom: 0px;
         right: 0px;
         position: absolute;
