--- a/scss/layout/_header-section.scss
+++ b/scss/layout/_header-section.scss
@@ -10,10 +10,23 @@
     max-height: fit-content;
     background-color: #FFFFFF40;
 
+    @media screen and (max-width: $bp-tablet) {
+        background-color: transparent;
+        padding: 16px;
+    }
+
     &__container {
         gap: 16px;
         display: flex;
         align-items: center;
+    }
+
+    &__logotype {
+
+        @media screen and (max-width: $bp-mobile) {
+            width: 57px;
+            height: 30px;
+        }
     }
 
     &__nav {
@@ -23,15 +36,42 @@
     }
 
     &__menu {
-        display: flex;
-        justify-content: center;
-        flex-grow: 1;
-        gap: 56px;
+        display: none;
+
+        @media screen and (min-width: $bp-desktop) {
+            display: flex;
+            justify-content: center;
+            flex-grow: 1;
+            gap: 56px;
+        }
     }
 
     &__icon-link {
-        display: flex;
-        gap: 32px;
+        display: none;
+
+        @media screen and (min-width: $bp-desktop) {
+            display: flex;
+            gap: 32px;
+        }
+    }
+
+    &__burger-menu {
+        fill: var(--color-brand-white);
+        background-color: transparent;
+        border: none;
+
+        @media screen and (min-width: $bp-desktop) {
+            display: none;
+        }
+
+        &--litel {
+
+
+            @media screen and (max-width: $bp-mobile) {
+                width: 24px;
+                height: 24px;
+            }
+        }
     }
 
     &__svg {
