--- a/scss/layout/_hero-section.scss
+++ b/scss/layout/_hero-section.scss
@@ -11,24 +11,79 @@
     background-position: right;
     background-size: cover;
 
+    @media screen and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        background-image:
+            linear-gradient(89.38deg,
+                #FFFFFF 30.62%,
+                rgba(255, 255, 255, 0.850898) 41.31%,
+                rgba(255, 255, 255, 0.193204) 58.65%,
+                rgba(255, 255, 255, 0) 72.78%),
+            url(../image/hero-background@2x.jpg);
+    }
+
     &__content {
         margin-left: 100px;
+
+        @media screen and (max-width: $bp-tablet) {
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     &__item {
         margin-bottom: 16px;
+
+        @media screen and (max-width: $bp-tablet) {
+            margin-bottom: 0;
+            font-size: 12px;
+            line-height: 1.5;
+            font-weight: 400;
+        }
+    }
+
+    &__hero-title {
+        max-width: 822px;
     }
 
     &__logo {
-        margin-bottom: 40px;
+        margin-bottom: 32px;
+        font-size: 54px;
+        line-height: 1.17;
+
+        @media screen and (min-width: $bp-tablet) {
+            margin-bottom: 40px;
+            font-size: 140px;
+            font-weight: 700;
+            line-height: .8;
+        }
     }
 
 
     &__mini-p {
         margin-bottom: 0;
-        padding-left: 38px;
-        font-size: 12px;
+        padding: 0;
+        font-size: 14px;
         font-weight: 400;
-        line-height: 1.5;
+        line-height: 1.4;
+
+        @media screen and (min-width: $bp-tablet) {
+
+            padding-left: 38px;
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 1.5;
+        }
+    }
+
+    &__button-margin {
+        margin-bottom: 8px;
+
+        @media screen and (min-width: $bp-tablet) {
+            margin-bottom: 14px;
+        }
     }
 }
