--- a/scss/layout/_slider-section.scss
+++ b/scss/layout/_slider-section.scss
@@ -1,41 +1,100 @@
 .slider-section {
-    padding: 48px 0px 91px 0px;
 
     &__title {
+        font-size: 38px;
         text-align: center;
+
+        @media screen and (min-width: $bp-mobile) {
+            font-size: 64px;
+            text-align: center;
+        }
     }
 
     &__container {
+        padding-bottom: 50px;
         gap: 32px;
         display: flex;
         align-items: center;
+
+        @media screen and (max-width: $bp-mobile) {
+            padding-bottom: 0;
+        }
+    }
+
+    &__overflow {
+        overflow: hidden;
     }
 
     &__list {
-        gap: 16px;
-        flex-grow: 1;
-        display: flex;
+        margin-bottom: 32px;
     }
 
-    &__item {
-        flex-basis: calc((100% - 32px) / 3);
+    &__button {
+        display: none;
+
+        @media screen and (min-width: $bp-mobile) {
+            display: flex;
+        }
     }
+
+    // &__button {
+    //     @media screen and (max-width: $bp-mobile) {
+    //         display: none;
+    //     }
+    // }
+
+    //     gap: 16px;
+    //     flex-grow: 1;
+    //     display: flex;
+    //     flex-wrap: wrap;
+    // }
+
+    // &__item {
+    //     flex-basis: calc((100% - 32px) / 3);
+    // }
 
     &__card {
-        color: var(--color-brand-white);
-        text-align: center;
-        height: 400px;
-        border-radius: 8px;
-        border: 1px solid var(--color-grey);
+        position: relative;
+        height: 456px;
+        width: 100%;
+        border-radius: 4px 120px;
         background-image: linear-gradient(180.05deg,
                 rgba(1, 28, 68, 0) 48.53%,
                 rgba(1, 28, 68, 0.725825) 84.61%,
                 #011C44 101.39%);
-        transition: transform 0.3s;
+
         cursor: pointer;
+
+
+    }
+
+    &__trans {
+        transition: transform 0.3s;
 
         &:hover {
             transform: scale(1.05);
         }
     }
+
+    &__image {
+        position: absolute;
+        z-index: -1;
+        border-radius: 4px 120px;
+        width: 100%;
+        height: 100%;
+    }
+
+    &__text {
+        color: var(--color-brand-white);
+        font-size: 22px;
+        font-weight: 400;
+        line-height: 1.18;
+        text-align: center;
+        position: absolute;
+        width: 152px;
+        height: 52px;
+        top: 352px;
+        left: 115px;
+    }
+
 }
