--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import "./components/link";
 @import "./components/visually-hidden";
 @import "./components/pagination";
+@import "./components/contact-form";
 
 
 
