--- a/scss/components/_contact-form.scss
+++ b/scss/components/_contact-form.scss
@@ -25,7 +25,9 @@
         color: palevioletred;
     }
 
-    &__label {}
+    &__label {
+        display: none;
+    }
 
     &__button {
         width: 100%;
