--- a/scss/layout/_mobile-menu.scss
+++ b/scss/layout/_mobile-menu.scss
@@ -7,19 +7,34 @@
     background-color: var(--color-brand-white);
     transform: translateX(100%);
     transition: transform 0.3s;
+    padding: 16px 20px;
 
     &__is-open {
         transform: translateX(0);
     }
 
-    &__my-class {
-        text-align: center;
-        font-size: 35px;
-        font-family: 'Roboto';
-        font-weight: 700;
-        line-height: 1.5;
-        padding: 70px 0px;
+    &__logo {
+        margin-bottom: 32px;
     }
+
+    &__nav {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    &__list {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    &__soc {
+        display: flex;
+        gap: 16px;
+    }
+
+
 
     &__button-close {
         position: fixed;
